# routes/index.js
@@ -3,8 +3,7 @@ const routes = express.Router();
 
 routes.use('/', require('./swagger'));
 
-routes.use('/gardens', require('./vegetables.js'))
-routes.use('/gardens', require('./flowers.js'))
+routes.use('/contacts', require('./contacts.js'))
 
 routes.use(
     '/',
