# swagger.json
@@ -18,7 +18,7 @@
         "responses": {}
       }
     },
-    "/vegetables/": {
+    "/contacts/": {
       "get": {
         "description": "",
         "produces": [
@@ -40,25 +40,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "plantName": {
+                "firstName": {
                   "example": "any"
                 },
-                "scientificName": {
+                "lastName": {
                   "example": "any"
                 },
-                "countryOfOrigin": {
+                "email": {
                   "example": "any"
                 },
-                "bestEnvironment": {
+                "favoriteColor": {
                   "example": "any"
                 },
-                "bestTimeToPlant": {
-                  "example": "any"
-                },
-                "whenToHarvest": {
-                  "example": "any"
-                },
-                "commonRecipes": {
+                "birthday": {
                   "example": "any"
                 }
               }
@@ -72,7 +66,7 @@
         }
       }
     },
-    "/vegetables/{id}": {
+    "/contacts/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -107,141 +101,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "plantName": {
+                "firstName": {
                   "example": "any"
                 },
-                "scientificName": {
+                "lastName": {
                   "example": "any"
                 },
-                "countryOfOrigin": {
+                "email": {
                   "example": "any"
                 },
-                "bestEnvironment": {
+                "favoriteColor": {
                   "example": "any"
                 },
-                "bestTimeToPlant": {
-                  "example": "any"
-                },
-                "whenToHarvest": {
-                  "example": "any"
-                },
-                "commonRecipes": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/flowers/": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "plantName": {
-                  "example": "any"
-                },
-                "scientificName": {
-                  "example": "any"
-                },
-                "countryOfOrigin": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        }
-      }
-    },
-    "/flowers/{id}": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "plantName": {
-                  "example": "any"
-                },
-                "scientificName": {
-                  "example": "any"
-                },
-                "countryOfOrigin": {
+                "birthday": {
                   "example": "any"
                 }
               }
